<resources>
    <string name="next">Next</string>
    <string name="copy">Copy</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">OK</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="password">Password</string>
    <string name="update">Update</string>
    <string name="none">None</string>
    <string name="delete">Delete</string>
    <string name="network_error">Network error, please try again later.</string>
    <string name="cn_current_language">language</string>
    <string name="permission_declined">QPocket does not have the permission to access %s. Please go to Settings to grant permission.</string>
    <string name="permission_camera">Camera</string>
    <string name="permission_storage">Storage</string>
    <string name="permission_location">Location</string>
    <string name="tips_forcequit">Oops! There was an unexpected error. Please click \'Submit\' to report the problem. Thank you! </string>
    <string name="menu_report">Submit</string>
    <string name="create_wallet_new">CREATE WALLET</string>
    <string name="create_wallet_import">IMPORT WALLET</string>
    <string name="create_wallet_title">Create Wallet</string>
    <string name="create_wallet_btn">Create</string>
    <string name="create_wallet_password">Wallet Password</string>
    <string name="create_wallet_confirm_password">Confirm Password</string>
    <string name="create_wallet_hint">Password Hint (Optional)</string>
    <string name="create_password_not_equals">Passwords don\'t match</string>
    <string name="create_password_fail">Create wallet fail!</string>
    <string name="backup_wallet_title">Backup Phrase</string>
    <string name="backup_wallet_skip">Skip</string>
    <string name="create_wallet_btn_start">Start</string>
    <string name="backup_wallet_info">Backup phrase is the only way to restore your wallet. Save them somewhere safe and secure.</string>
    <string name="backup_wallet_info_hint">Please ensure that you are not being watched when executing backup.</string>
    <string name="backup_wallet_remember_title">Backup Phrase</string>
    <string name="backup_wallet_remember_hint">Backup the following phrases and we\'ll verify them in the next step.</string>
    <string name="backup_wallet_input_hint_title">Verify Phrase</string>
    <string name="backup_wallet_input_hint">Tap the words to put them next to each other in the correct order.</string>
    <string name="backup_wallet_input_fail">Incorrect order</string>
    <string name="import_wallet_title">Import Wallet</string>
    <string name="import_wallet_input_phrase_hint">Phases separated by space</string>
    <string name="import_wallet_input_keystore_hint">keystore Json</string>
    <string name="import_wallet_input_private_hint">Private Key</string>
    <string name="import_wallet_input_watch_hint">%s Address</string>
    <string name="import_wallet_btn">Import</string>
    <string name="import_phrase_tip">Words separated by a space.(Usually contains 12 words)</string>
    <string name="import_private_tip">Typically 64 alphanumeric characters.</string>
    <string name="import_keystore_tip">Several lines of text beginning with \"{…}\" plus the password you used to encrypt it.</string>
    <string name="create_password_tip">Set Password</string>
    <string name="import_wallet_fail_exit">The wallet has already existed</string>
    <string name="import_wallet_fail_phrase">Invalid Phrase</string>
    <string name="import_wallet_fail_private_key">Invalid Private Key</string>
    <string name="import_wallet_fail_keystore">Invalid Keystore</string>
    <string name="import_wallet_fail_watch">Invalid %s Address</string>
    <string name="import_wallet_qkc">QuarkChain</string>
    <string name="import_wallet_eth">Ethereum</string>
    <string name="import_wallet_trx">TRX</string>
    <string name="main_menu_tag_wallet">Wallet</string>
    <string name="main_menu_tag_setting">Settings</string>
    <string name="main_menu_tag_dapp">DApps</string>
    <string name="wallet_shard_id">Shard: %s</string>
    <string name="wallet_token_total_symbol">QKC</string>
    <string name="wallet_copy_address_label">Address</string>
    <string name="wallet_qr_address">QuarkChain Address</string>
    <string name="wallet_qr_address_title">Receive</string>
    <string name="wallet_qr_address_title2">Receive</string>
    <string name="error_fail_generate_qr">Could not generate qr code.</string>
    <string name="wallet_qr_eth_address">Ethereum Address</string>
    <string name="wallet_qr_scan_title">Scan</string>
    <string name="wallet_qr_light_up">Light on</string>
    <string name="wallet_qr_light_down">Light off</string>
    <string name="wallet_qr_scan_fail">Scan failed</string>
    <string name="wallet_qr_scan_album">Album</string>
    <string name="wallet_manager_title">My Wallet</string>
    <string name="wallet_edit_title">Wallet Management</string>
    <string name="wallet_edit_export_ks">Export Keystore</string>
    <string name="wallet_edit_export_pk">Export Private Key</string>
    <string name="wallet_edit_export_phrase">Backup Phrase</string>
    <string name="wallet_edit_export_password">Enter Password</string>
    <string name="wallet_edit_delete">Delete Wallet</string>
    <string name="wallet_edit_setting_icon">Change Wallet Icon</string>
    <string name="wallet_edit_setting_name">Change Wallet Name</string>
    <string name="wallet_edit_dialog_name_title">Change Wallet Name</string>
    <string name="name">Name</string>
    <string name="wallet_export_success_phrase_pk_tip">Do NOT backup the private key to email, note application and instant messenger.</string>
    <string name="wallet_export_success_phrase_ky_tip">Do NOT backup the keystore to email, note application and instant messenger.</string>
    <string name="wallet_export_success_offline">Transport Offline</string>
    <string name="wallet_export_success_offline_pk_tip">Do NOT transport the private key using internet transportation tool.</string>
    <string name="wallet_export_success_offline_ky_tip">Do NOT transport the keystore using internet transportation tool.</string>
    <string name="wallet_export_private_key">Private Key</string>
    <string name="wallet_export_keystore">Keystore</string>
    <string name="copy_success">Copied</string>
    <string name="wallet_edit_icon">Wallet Icon</string>
    <string name="wallet_transaction_detail_title">Detail</string>
    <string name="wallet_transaction_total_token_title">Total:</string>
    <string name="wallet_transaction_merge">Merge</string>
    <string name="wallet_transaction_detail_item_title">Transaction</string>
    <string name="wallet_transaction_detail_amount">Amount:</string>
    <string name="wallet_transaction_detail_actual">Actual Tx Cost:</string>
    <string name="wallet_transaction_from">From</string>
    <string name="wallet_transaction_to">To</string>
    <string name="wallet_transaction_from2">From:</string>
    <string name="wallet_transaction_to2">To:</string>
    <string name="wallet_transaction_pending">Sending</string>
    <string name="wallet_transaction_sent">Sent</string>
    <string name="wallet_transaction_sent_fail">Failed</string>
    <string name="wallet_transaction_receive">Received</string>
    <string name="wallet_transaction_block_title">Block:</string>
    <string name="wallet_transaction_tx_title">Tx:</string>
    <string name="wallet_transaction_send_create_title">Send</string>
    <string name="wallet_transaction_send_hint">Amount To Send</string>
    <string name="wallet_transaction_to_address_hint">To Address</string>
    <string name="wallet_transaction_send_gas">Gas Price</string>
    <string name="wallet_transaction_send_gas_limit">Gas Limit</string>
    <string name="wallet_transaction_send_gas_gwei">GWei</string>
    <string name="wallet_transaction_send">Generate Transaction</string>
    <string name="wallet_transaction_send_fail">Generate Transaction Failed!</string>
    <string name="wallet_transaction_to_address_error">Invalid Address</string>
    <string name="wallet_transaction_to_amount_error">Invalid Amount</string>
    <string name="password_error">Password Error</string>
    <string name="transaction_balance_error_title">Not Enough Balance</string>
    <string name="transaction_balance_error_message_merge_success_title">Transaction Sent</string>
    <string name="transaction_balance_error_message_merge_success_message">The merging transactions have been sent, please pull down to refresh until the balance is enough and continue the transaction.</string>
    <string name="transaction_balance_token_amount_error">Not Enough Token Balance</string>
    <string name="transaction_balance_token_merge_success_title">Transaction Sent</string>
    <string name="transaction_balance_token_merge_success_message">The primary shard has been switched to the token\'s shard. Please pull down to refresh until the balance is enough and continue the transaction.</string>
    <string name="transaction_balance_token_merge_success_message_nochange">Please pull down to refresh until the balance is enough and continue the transaction.</string>
    <string name="transaction_balance_token_switch_title">Transaction Sent</string>
    <string name="transaction_balance_public_switch_success_message">The primary shard has been switched to the token\'s shard. Please pull down to refresh until the balance is enough and continue the transaction.</string>
    <string name="transaction_balance_public_switch_success_message_nochange">Please pull down to refresh until the balance is enough and continue the transaction.</string>
    <string name="transaction_balance_public_merge_success_message_nochange">Please pull down to refresh until the balance is enough and continue the transaction.</string>
    <string name="wallet_transaction_send_title">Transaction Confirm</string>
    <string name="wallet_transaction_send_amount_title">Amount:</string>
    <string name="wallet_transaction_send_max_title">Max Transaction Fee:</string>
    <string name="wallet_transaction_send_hash_title">Signed Transaction Hash:</string>
    <string name="transaction_send_shard_limit">Cross shard transaction from shard %s to %s</string>
    <string name="transaction_send_time">(confirmation time is ~90 seconds)</string>
    <string name="transaction_send_action">Submit Transaction</string>
    <string name="transaction_send_fail">Transaction Failed</string>
    <string name="transaction_send_success">Transaction Sent</string>
    <string name="wallet_transaction_send_token_max_title">Max Transaction Fee:</string>
    <string name="wallet_transaction_send_from">From</string>
    <string name="wallet_transaction_send_to">To</string>
    <string name="token_detail_basic">Basic Information</string>
    <string name="token_detail_token_title">Balance:</string>
    <string name="token_detail_available_title">Available:</string>
    <string name="token_detail_website">Website:</string>
    <string name="token_detail_address">Smart Contract:</string>
    <string name="public_sale_start_title">Start Time:</string>
    <string name="trx_freeze_type">Type:</string>
    <string name="import_symbol_type_default">Unknown</string>
    <string name="export_wallet_hint">The exported wallet is a HD wallet, please make sure you\'ve backed up the phase so that you can recover all the coin types(QKC, ETH, TRX, BTC and etc) through the phase. The exported private key or keystore can only recover the current coin type.</string>
    <string name="btc_change_segwit">SegWit</string>
    <string name="btc_change_normal">Normal</string>
    <string name="edit_btc_change_segwit">Switch Address Type</string>
    <string name="setting_open_app">Open QPocket</string>
    <string name="setting_open_app_info">Unlock when re-opening QPocket after 1 minute</string>
    <string name="setting_unlock_info">You can use unlock setting only if touch sensor is enabled</string>
</resources>