<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="true">

    <!-- 顶部  -->
    <com.quarkonium.qpocket.view.TopBarView
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/appbar_top_height" />

    <TextView
        android:id="@+id/phrase_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top_layout"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="@dimen/dp_15"
        android:layout_marginRight="19dp"
        android:text="@string/wallet_export_private_key"
        android:textColor="@color/text_title"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/phrase_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phrase_title"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="19dp"
        android:text="@string/wallet_export_success_phrase_pk_tip"
        android:textColor="@color/text_message"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/offline_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/phrase_tip"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginRight="19dp"
        android:text="@string/wallet_export_success_offline"
        android:textColor="@color/text_title"
        android:textSize="15sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/offline_tip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offline_title"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="19dp"
        android:text="@string/wallet_export_success_offline_pk_tip"
        android:textColor="@color/text_message"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/offline_tip"
        android:orientation="vertical">

        <TextView
            android:id="@+id/export_password_text"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="19dp"
            android:layout_weight="1"
            android:background="@drawable/phrase_edit_text_bg"
            android:minHeight="105dp"
            android:padding="15dp"
            android:scrollbars="vertical" />

        <TextView
            android:id="@+id/export_hd_pk_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="@dimen/dp_20"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="@dimen/dp_10"
            android:text="@string/export_wallet_hint"
            android:textColor="#ff3233"
            android:textSize="14sp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/copy_action"
            style="@style/ButtonForegroundEffectStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="19dp"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="19dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_back_selector"
            android:gravity="center"
            android:text="@string/copy"
            android:textColor="#ffffff"
            android:textSize="15sp" />
    </LinearLayout>
</RelativeLayout>