<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardElevation="2dp"
    card_view:cardCornerRadius="7dp"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="18dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="20dp">

        <TextView
            android:id="@+id/dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/wallet_edit_dialog_name_title"
            android:textColor="@color/text_title"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/personal_nick_name"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginBottom="30dp"
            android:background="@null"
            android:drawableBottom="@drawable/edit_text_bg"
            android:drawablePadding="2dp"
            android:gravity="bottom|left"
            android:hint="@string/name"
            android:maxLength="12"
            android:singleLine="true"
            android:textColor="@color/text_title"
            android:textColorHint="#d6d6d6"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/negative_btn"
                style="@style/ButtonForegroundEffectStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_gray_bg"
                android:gravity="center"
                android:minHeight="36dp"
                android:text="@string/cancel"
                android:textColor="#ffffff"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/positive_btn"
                style="@style/ButtonForegroundEffectStyle"
                android:layout_width="0dp"
                android:layout_height="45dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_black_bg"
                android:gravity="center"
                android:minHeight="36dp"
                android:text="@string/confirm"
                android:textColor="#ffffff"
                android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
