<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="19dp"
    android:paddingRight="19dp">

    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/right_img"
        android:gravity="center_vertical"
        android:minHeight="89dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:text="@string/setting_open_app"
            android:textColor="@color/text_title"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/setting_open_app_info"
            android:textColor="@color/color_666666"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="15dp"
            android:text="@string/setting_unlock_info"
            android:textColor="#FB472E"
            android:textSize="10sp"
            android:visibility="gone" />
    </LinearLayout>


    <ImageView
        android:id="@+id/right_img"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:src="@drawable/check_box_selected" />

    <View
        android:id="@+id/line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/container"
        android:background="#ebebeb"
        android:paddingLeft="19dp"
        android:paddingRight="19dp" />
</RelativeLayout>