<?xml version="1.0" encoding="utf-8"?><!--创建钱包-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/import_nested_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/new_account_action">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginRight="19dp"
                android:text="@string/import_keystore_tip"
                android:textColor="@color/text_message"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/phrase_edit_text"
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="19dp"
                android:background="@drawable/phrase_edit_text_bg"
                android:focusable="true"
                android:gravity="left|top"
                android:hint="@string/import_wallet_input_keystore_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:padding="15dp"
                android:textColor="@color/text_title"
                android:textColorHint="@color/text_hint"
                android:textSize="14sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="17dp"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="17dp"
                app:cardElevation="2dp"
                card_view:cardCornerRadius="7dp"
                card_view:cardUseCompatPadding="true">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="56dp">

                        <ImageView
                            android:id="@+id/confrim_pd_icon"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="12dp"
                            android:layout_marginRight="12dp"
                            android:src="@drawable/home_confirm_password" />

                        <EditText
                            android:id="@+id/pd_confirm_edit_text"
                            style="@style/login_edit_text_password"
                            android:layout_height="match_parent"
                            android:layout_centerVertical="true"
                            android:layout_toRightOf="@+id/confrim_pd_icon"
                            android:background="@null"
                            android:gravity="center_vertical"
                            android:hint="@string/password"
                            android:paddingRight="35dp" />

                        <ImageView
                            android:id="@+id/show_pd"
                            android:layout_width="52dp"
                            android:layout_height="52dp"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:padding="15dp"
                            android:src="@drawable/hide_password" />
                    </RelativeLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:id="@+id/import_symbol_layout"
                android:layout_width="match_parent"
                android:layout_height="34dp"
                android:layout_marginTop="@dimen/dp_15">

                <TextView
                    android:id="@+id/import_symbol_type"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="19dp"
                    android:layout_marginRight="19dp"
                    android:text="@string/trx_freeze_type"
                    android:textColor="@color/text_title"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/import_token_symbol"
                    android:layout_width="wrap_content"
                    android:layout_height="34dp"
                    android:layout_centerVertical="true"
                    android:layout_toRightOf="@+id/import_symbol_type"
                    android:background="@drawable/create_wallet_language_bg"
                    android:drawableRight="@drawable/create_wallet_language"
                    android:drawablePadding="10dp"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/import_symbol_type_default"
                    android:textColor="@color/text_title"
                    android:textSize="12sp" />
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btc_type_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="19dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <TextView
                    android:id="@+id/btc_type_segwit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/check_box_green_selector"
                    android:drawablePadding="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/btc_change_segwit"
                    android:textColor="@color/text_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/btc_type_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:drawableLeft="@drawable/check_box_green_selector"
                    android:drawablePadding="12dp"
                    android:gravity="center_vertical"
                    android:text="@string/btc_change_normal"
                    android:textColor="@color/text_title"
                    android:textSize="14sp" />
            </LinearLayout>

            <include
                android:id="@+id/error_layout"
                layout="@layout/error_text_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="19dp"
                android:layout_marginTop="@dimen/dp_20"
                android:layout_marginRight="19dp" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <TextView
        android:id="@+id/new_account_action"
        style="@style/ButtonForegroundEffectStyle"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="19dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_back_selector"
        android:gravity="center"
        android:text="@string/import_wallet_btn"
        android:textColor="#ffffff"
        android:textSize="15sp" />
</RelativeLayout>